Copper Lantern Blocks & Copper Gates
* Added Copper Lantern Blocks
* Added Copper Gates
* Changed Iron & Golden Gates recipes, which now require 6 iron/golden bars.
* Shelves can be used in a furnace to make charred shelves.
* Added #lantern_blocks and #gates block tags
* Added #shelves_that_burn item tags