@@ -1,28 +1,19 @@
 package com.brand.blockus.registry.content.bundles;
 
-import com.brand.blockus.blocks.base.OxidizableWallBlock;
-import com.brand.blockus.utils.helper.BlockFactory;
-import net.minecraft.block.Block;
+import com.google.common.collect.ImmutableBiMap;
+import com.google.common.collect.ImmutableList;
+import net.minecraft.block.*;
 import net.minecraft.block.Oxidizable.OxidationLevel;
-import net.minecraft.block.OxidizableBlock;
-import net.minecraft.block.OxidizableSlabBlock;
-import net.minecraft.block.OxidizableStairsBlock;
+import org.apache.commons.lang3.function.TriFunction;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
+import java.util.function.BiFunction;
+import java.util.function.Consumer;
+import java.util.function.Function;
 
-public record CopperBundle(
-    String type,
-    Block base,
-    Block block,
-    Block stairs,
-    Block slab,
-    Block wall,
-    Block blockWaxed,
-    Block stairsWaxed,
-    Block slabWaxed,
-    Block wallWaxed
-) {
+public record CopperBundle(Block unaffected, Block exposed, Block weathered, Block oxidized, Block waxed, Block waxedExposed, Block waxedWeathered, Block waxedOxidized) {
 
     public static final List<CopperBundle> LIST = new ArrayList<>();
 
@@ -30,89 +21,48 @@ public record CopperBundle(
         return LIST;
     }
 
-    public static Builder of(String type, OxidationType oxidation, Block base) {
-        return new Builder(type, oxidation, base);
+    public static <WaxedBlock extends Block, WeatheringBlock extends Block & Oxidizable> CopperBundle create(String baseId, TriFunction<String, Function<AbstractBlock.Settings, Block>, AbstractBlock.Settings, Block> registerFunction, Function<AbstractBlock.Settings, WaxedBlock> waxedBlockFactory, BiFunction<OxidationLevel, AbstractBlock.Settings, WeatheringBlock> unwaxedBlockFactory, Function<OxidationLevel, AbstractBlock.Settings> settingsFromOxidationLevel) {
+        Block unaffected = registerFunction.apply(baseId, (Function)(settings) -> (Block)unwaxedBlockFactory.apply(OxidationLevel.UNAFFECTED, (AbstractBlock.Settings) settings), settingsFromOxidationLevel.apply(OxidationLevel.UNAFFECTED).mapColor(MapColor.ORANGE));
+        Block exposed = registerFunction.apply("exposed_" + baseId, (Function)(settings) -> (Block)unwaxedBlockFactory.apply(OxidationLevel.EXPOSED, (AbstractBlock.Settings) settings), settingsFromOxidationLevel.apply(OxidationLevel.EXPOSED).mapColor(MapColor.TERRACOTTA_LIGHT_GRAY));
+        Block weathered = registerFunction.apply("weathered_" + baseId, (Function)(settings) -> (Block)unwaxedBlockFactory.apply(OxidationLevel.WEATHERED, (AbstractBlock.Settings) settings), settingsFromOxidationLevel.apply(OxidationLevel.WEATHERED).mapColor(MapColor.DARK_AQUA));
+        Block oxidized = registerFunction.apply("oxidized_" + baseId, (Function)(settings) -> (Block)unwaxedBlockFactory.apply(OxidationLevel.OXIDIZED, (AbstractBlock.Settings) settings), settingsFromOxidationLevel.apply(OxidationLevel.OXIDIZED).mapColor(MapColor.TEAL));
+        Objects.requireNonNull(waxedBlockFactory);
+        Block waxed = registerFunction.apply("waxed_" + baseId, waxedBlockFactory::apply, settingsFromOxidationLevel.apply(OxidationLevel.UNAFFECTED).mapColor(MapColor.ORANGE));
+        Objects.requireNonNull(waxedBlockFactory);
+        Block waxedExposed = registerFunction.apply("waxed_exposed_" + baseId, waxedBlockFactory::apply, settingsFromOxidationLevel.apply(OxidationLevel.EXPOSED).mapColor(MapColor.TERRACOTTA_LIGHT_GRAY));
+        Objects.requireNonNull(waxedBlockFactory);
+        Block waxedWeathered = registerFunction.apply("waxed_weathered_" + baseId, waxedBlockFactory::apply, settingsFromOxidationLevel.apply(OxidationLevel.WEATHERED).mapColor(MapColor.DARK_AQUA));
+        Objects.requireNonNull(waxedBlockFactory);
+        Block waxedOxidized = registerFunction.apply("waxed_oxidized_" + baseId, waxedBlockFactory::apply, settingsFromOxidationLevel.apply(OxidationLevel.OXIDIZED).mapColor(MapColor.TEAL));
+        CopperBundle bundle = new CopperBundle(unaffected, exposed, weathered, oxidized, waxed, waxedExposed, waxedWeathered, waxedOxidized);
+        LIST.add(bundle);
+        return bundle;
     }
 
-    public List<Block> allBlocks() {
-        return List.of(block, blockWaxed);
+    public static BiFunction<OxidationLevel, AbstractBlock.Settings, OxidizableDoorBlock> oxidizableDoor(BlockSetType type) {
+        return (oxidationLevel, settings) -> new OxidizableDoorBlock(type, oxidationLevel, settings);
     }
 
-    public List<Block> allSlabs() {
-        return List.of(slab, slabWaxed);
+    public ImmutableBiMap<Block, Block> getOxidizingMap() {
+        return ImmutableBiMap.of(this.unaffected, this.exposed, this.exposed, this.weathered, this.weathered, this.oxidized);
     }
 
-    public List<Block> allStairs() {
-        return List.of(stairs, stairsWaxed);
+    public ImmutableBiMap<Block, Block> getWaxingMap() {
+        return ImmutableBiMap.of(this.unaffected, this.waxed, this.exposed, this.waxedExposed, this.weathered, this.waxedWeathered, this.oxidized, this.waxedOxidized);
     }
 
-    public List<Block> allWalls() {
-        return List.of(wall, wallWaxed);
+    public ImmutableList<Block> getAll() {
+        return ImmutableList.of(this.unaffected, this.waxed, this.exposed, this.waxedExposed, this.weathered, this.waxedWeathered, this.oxidized, this.waxedOxidized);
     }
 
-    public List<Block> allUnwaxed() {
-        return List.of(block, stairs, slab, wall);
-    }
-
-    public List<Block> allWaxed() {
-        return List.of(blockWaxed, stairsWaxed, slabWaxed, wallWaxed);
-    }
-
-    public List<Block> all() {
-        return List.of(block, stairs, slab, wall, blockWaxed, stairsWaxed, slabWaxed, wallWaxed);
-    }
-
-    public enum OxidationType {
-        UNAFFECTED(OxidationLevel.UNAFFECTED, ""),
-        EXPOSED(OxidationLevel.EXPOSED, "exposed_"),
-        WEATHERED(OxidationLevel.WEATHERED, "weathered_"),
-        OXIDIZED(OxidationLevel.OXIDIZED, "oxidized_");
-
-        private final OxidationLevel oxidationLevel;
-        private final String prefix;
-
-        OxidationType(OxidationLevel oxidationLevel, String prefix) {
-            this.oxidationLevel = oxidationLevel;
-            this.prefix = prefix;
-        }
-
-        public OxidationLevel getLevel() {
-            return oxidationLevel;
-        }
-
-        public String getPrefix() {
-            return prefix;
-        }
-    }
-
-    public static class Builder {
-        public final String type;
-        public final Block base;
-        public final OxidationType oxidation;
-
-        public Builder(String type, OxidationType oxidation, Block base) {
-            this.type = type;
-            this.base = base;
-            this.oxidation = oxidation;
-        }
-
-        public CopperBundle register() {
-            String prefix = oxidation.getPrefix();
-            OxidationLevel oxidationLevel = oxidation.getLevel();
-            Block block = BlockFactory.registerCopy(prefix + type, (settings) -> new OxidizableBlock(oxidation.getLevel(), settings), base);
-            Block blockWaxed = BlockFactory.registerCopy("waxed_" + prefix + type, base);
-            CopperBundle bundle = new CopperBundle(type, base,
-                block,
-                BlockFactory.registerCopy(prefix + BlockFactory.replaceId(type) + "_stairs", (settings) -> new OxidizableStairsBlock(oxidationLevel, base.getDefaultState(), settings), base),
-                BlockFactory.registerCopy(prefix + BlockFactory.replaceId(type) + "_slab", (settings) -> new OxidizableSlabBlock(oxidationLevel, settings), base),
-                BlockFactory.registerCopy(prefix + BlockFactory.replaceId(type) + "_wall", (settings) -> new OxidizableWallBlock(oxidationLevel, settings), base),
-                blockWaxed,
-                BlockFactory.stairs(blockWaxed),
-                BlockFactory.slab(blockWaxed),
-                BlockFactory.wall(blockWaxed)
-            );
-            LIST.add(bundle);
-            return bundle;
-        }
+    public void forEach(Consumer<Block> consumer) {
+        consumer.accept(this.unaffected);
+        consumer.accept(this.exposed);
+        consumer.accept(this.weathered);
+        consumer.accept(this.oxidized);
+        consumer.accept(this.waxed);
+        consumer.accept(this.waxedExposed);
+        consumer.accept(this.waxedWeathered);
+        consumer.accept(this.waxedOxidized);
     }
 }
